--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Desktop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600
+        " Width="800">
     <Grid>
-        
+        <Button x:Name="tpFormRegistrationButton" Content="Регистрация" HorizontalAlignment="Left" Margin="400,504,0,0" VerticalAlignment="Top" Height="50" Width="316" Background="#FFDE4949" Foreground="White" BorderBrush="#FFDE4949" FontSize="18" Click="tpFormRegistrationButton_Click" />
+        <Button x:Name="LoginButton" Content="Войти" HorizontalAlignment="Left" Margin="400,428,0,0" VerticalAlignment="Top" Height="53" Width="316" Background="#FFDE4949" Foreground="White" BorderBrush="#FFDE4949" RenderTransformOrigin="0.5,0.5" FontSize="18" Click="LoginButton_Click"/>
+        <Label Content="Почта" HorizontalAlignment="Left" Margin="400,178,0,0" VerticalAlignment="Top" Height="44" Width="107" FontSize="20"/>
+        <Label Content="Пароль" HorizontalAlignment="Left" Margin="400,266,0,0" VerticalAlignment="Top" FontSize="20" RenderTransformOrigin="0.089,0.52"/>
+        <Label Content="Добро пожаловать!" HorizontalAlignment="Left" Margin="400,60,0,0" VerticalAlignment="Top" FontSize="24" RenderTransformOrigin="0.536,0.096"/>
+        <Label Content="Восстановить пароль" HorizontalAlignment="Left" Margin="488,370,0,0" VerticalAlignment="Top" FontSize="18"/>
+        <TextBox x:Name="MailTextBox" HorizontalAlignment="Left" Margin="408,227,0,0" TextWrapping="Wrap" Text="Введите почту" VerticalAlignment="Top" Width="228" Height="26" FontSize="18" BorderBrush="#FFE2E2E2" SelectionBrush="#FFDE4949" Foreground="#FFB0B0B0" GotFocus="MailTextBox_GotFocus"/>
+        <Image HorizontalAlignment="Left" Height="160" Margin="45,60,0,0" VerticalAlignment="Top" Width="151" Source="/2024-10-09_14-34-32.png" RenderTransformOrigin="0.689,0.264"/>
+        <Image HorizontalAlignment="Left" Height="160" Margin="45,60,0,0" VerticalAlignment="Top" Width="151" Source="/2024-10-09_14-34-32.png" RenderTransformOrigin="0.689,0.264"/>
+        <TextBox x:Name="PasswordTextBox" HorizontalAlignment="Left" Margin="408,326,0,0" TextWrapping="Wrap" Text="Ввелите пароль" VerticalAlignment="Top" Width="228" FontSize="18" BorderBrush="#FFE2E2E2" SelectionBrush="#FFDE4949" Foreground="#FFB0B0B0" GotFocus="PasswordTextBox_GotFocus"/>
     </Grid>
 </Window>
